--- a/src/views/login/login.component.html
+++ b/src/views/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
   <div class="login__inner">
     <div class="login__wrap">
-      <img class="login__banner" src="@/assets/images/login-banner.png" />
+      <div class="login__banner"></div>
       <a-form
         ref="formRef"
         class="login__form"
