feat: add list boilerplate

--- a/src/assets/styles/reset-antd.less
+++ b/src/assets/styles/reset-antd.less
@@ -1,7 +1,3 @@
-.ant-layout-sider {
-  background: #fff;
-}
-
 .ant-menu-item {
   display: flex;
   align-items: center;
@@ -19,4 +15,8 @@
   .anticon {
     margin-right: 4px !important;
   }
+}
+
+.ant-btn + .ant-btn {
+  margin-left: 16px;
 }
