--- a/src/views/login/login.component.html
+++ b/src/views/login/login.component.html
@@ -12,11 +12,7 @@
         <div class="login__form__title">账号密码登录</div>
 
         <a-form-item name="username">
-          <a-input
-            v-model:value="formData.username"
-            size="large"
-            placeholder="请输入手机号"
-          >
+          <a-input v-model:value="formData.username" size="large" placeholder="请输入手机号">
             <template #prefix>+86</template>
           </a-input>
         </a-form-item>
@@ -48,9 +44,7 @@
         <a-divider class="login__divider">OR</a-divider>
 
         <a-form-item>
-          <a-button block size="large" class="login__btn login__btn--wechat"
-            >企业微信登录</a-button
-          >
+          <a-button block size="large" class="login__btn login__btn--wechat">企业微信登录</a-button>
         </a-form-item>
       </a-form>
     </div>
