feat: add some global components

--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -4,10 +4,34 @@
   width: 180px !important;
 }
 
+.w200 {
+  width: 200px !important;
+}
+
+.ml10 {
+  margin-left: 10px;
+}
+
+.mr10 {
+  margin-right: 10px;
+}
+
 .mr12 {
   margin-right: 12px !important;
 }
 
-.mr16 {
-  margin-right: 16px;
+.mb15 {
+  margin-bottom: 15px;
+}
+
+.ml15 {
+  margin-left: 15px;
+}
+
+.mr15 {
+  margin-right: 15px;
+}
+
+.text-grey {
+  color: rgba(0, 0, 0, 0.45);
 }
