--- a/src/views/template/list/list.component.html
+++ b/src/views/template/list/list.component.html
@@ -23,12 +23,12 @@
   </a-form-item>
 </a-form>
 
-<table-action>
+<hmd-table-action>
   <template #left>
     <a-button>操作按钮</a-button>
     <a-button>操作按钮</a-button>
   </template>
-</table-action>
+</hmd-table-action>
 
 <a-table
   row-key="id"
